--- a/contact/index.html
+++ b/contact/index.html
@@ -28,24 +28,14 @@
   <section class="content">
     <h1>Contact</h1>
     <ul>
-      <li>studio@pedroarilla.com</li>
-      <li>+34 660 908 920</li>
-      <li>+44 (0)7522 185272</li>
+      <li><a href="mailto:pedro@arillatype.studio">pedro@arillatype.studio</a></li>
+      <li><a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a>, <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a>, <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a>, <a href="https://github.com/pedroarilla" rel="me" target="_blank" title="GitHub Pedro Arilla's profile">GitHub</a></li>
     </ul>
-    <h1>Social</h1>
-    <ul>
-      <li><a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a></li>
-      <li><a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a></li>
-      <li><a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></li>
-      <li><a href="https://facebook.com/pedroarillacortes" rel="me" target="_blank" title="Facebook Pedro Arilla's profile">Facebook</a></li>
-      <li><a href="https://open.spotify.com/user/pedroarilla" rel="me" target="_blank" title="Spotify Pedro Arilla's profile">Spotify</a></li>
-      <li><a href="https://github.com/pedroarilla" rel="me" target="_blank" title="GitHub Pedro Arilla's profile">GitHub</a></li>
-    </ul>
-    <img src="rsc/pedroarilla.jpg" id="portrait">
-    <p style="font-size: .6em;">Photo by <a href="https://www.xoelburgues.com/" target="_blank">Xoel Burgués</a> (Zaragoza, 2017).</p>
+    <img src="../pedroarilla.jpg" id="portrait">
+    <p style="font-size: .6em;">Photo by Uve Martínez (Málaga, 2019).</p>
   </section>
   <section class="footer">
-    <p>☺ 2010–<script>document.write(new Date().getFullYear())</script>, Pedro Arilla &emsp;&emsp; <span class="newlinefooter"></span><a href="mailto:studio@pedroarilla.com">Email</a> / <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> / <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> / <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
+    <p>☺ 2010–<script>document.write(new Date().getFullYear())</script>, Pedro Arilla &emsp;&emsp; <span class="newlinefooter"></span><a href="mailto:pedro@arillatype.studio">Email</a> / <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> / <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> / <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
   </section>
 </body>
 </html>
