--- a/fonts/index.html
+++ b/fonts/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<title>Fonts — Pedro Arilla</title>
-	<meta name="description" content="¡Hola! I’m an independent Type Director & Designer with a passion for words living between London and Málaga. I love helping all kind of brands worldwide to encapsulate typographically their voices.">
+	<meta name="description" content="Updated list of typefaces I have designed and are made public.">
   <meta property="og:title" content="Fonts — Pedro Arilla"/>
-	<meta property="og:description" content="¡Hola! I’m an independent Type Director & Designer with a passion for words living between London and Málaga. I love helping all kind of brands worldwide to encapsulate typographically their voices."/>
+	<meta property="og:description" content="Updated list of typefaces I have designed and are made public."/>
 	<meta property="og:type" content="website"/>
 	<meta property="og:url" content="https://pedroarilla.com/fonts"/>
 	<meta property="og:image" content="https://pedroarilla.com/pedroarilla.jpg"/>
@@ -27,18 +27,23 @@
   </section>
   <section class="content">
     <h1><strong>Fonts</strong></h1>
+    <article id="at-hauss-std">
+      <a href="https://arillatype.studio" title="Go to At Haüss Std font" target="_blank"><img src="rsc/at-hauss-std-font.gif" title="At Haüss Std font"></a>
+      <h2><a href="https://arillatype.studio" title="Go to At Haüss Std font" target="_blank">At Haüss Std</a> (Arillatype.Studio®, 2021)</h2>
+      <p>A contemporary celebration of mid-20th century neo-grotesque typefaces.</p>
+      <p><a href="https://arillatype.studio" title="Go to At Haüss Std font" target="_blank">At Haüss Std</a> @ Arillatype.Studio®</p>
+    </article>
     <article id="morillas">
       <img src="rsc/morillas-font.gif" title="Morillas font">
       <h2><a href="https://soundcloud.com/user-289897432/morillas-talks-pedro-arilla" title="Go to Morillas font" target="_blank">Morillas Sans</a> (Monotype, 2020)</h2>
       <p>Bespoke type family for Morillas for a (r)evolutionary identity.</p>
       <p>Italic by Emilios Theofanous.</p>
-      <p>Listen to <a href="https://soundcloud.com/user-289897432/morillas-talks-pedro-arilla" target="_blank">interview on Morillas Sans</a> @ SoundCloud.</p>
     </article>
     <article id="fs-rosa">
       <img src="rsc/fs-rosa-font.gif" title="FS Rosa font">
       <h2><a href="https://www.myfonts.com/fonts/mti/fs-rosa/" title="Go to FS Rosa font" target="_blank">FS Rosa</a> (Monotype, 2020)</h2>
       <p>A free-spirited and optimistic serif typeface.</p>
-      <p><a href="https://www.myfonts.com/fonts/mti/fs-rosa/" title="Go to FS Rosa font" target="_blank">Buy FS Rosa</a> @ MyFonts.</p>
+      <p><a href="https://www.myfonts.com/fonts/mti/fs-rosa/" title="Go to FS Rosa font" target="_blank">FS Rosa</a> @ MyFonts.</p>
     </article>
     <article id="motogp">
       <img src="rsc/motogp-font.gif" title="MotoGP font">
@@ -50,13 +55,13 @@
       <img src="rsc/fs-renaissance-font.gif" title="FS Renaissance font">
       <h2><a href="https://www.myfonts.com/fonts/mti/fs-renaissance/" title="Go to FS Renaissance font" target="_blank">FS Renaissance</a> (Monotype, 2020)</h2>
       <p>A flourishing display stencil based on a Craig Black’s lettering.</p>
-      <p><a href="https://www.myfonts.com/fonts/mti/fs-renaissance/" title="Go to FS Renaissance font" target="_blank">Buy FS Renaissance</a> @ MyFonts.</p>
+      <p><a href="https://www.myfonts.com/fonts/mti/fs-renaissance/" title="Go to FS Renaissance font" target="_blank">FS Renaissance</a> @ MyFonts.</p>
     </article>
     <article id="bunbury">
       <img src="rsc/bunbury-font.gif" title="Bunbury font">
       <h2><a href="https://www.myfonts.com/fonts/mti/bunbury/" title="Go to Bunbury font" target="_blank">Bunbury</a> (Monotype, 2020)</h2>
       <p>A capitals display font packed with hand-drawn quirks.</p>
-      <p><a href="https://www.myfonts.com/fonts/mti/bunbury/" title="Go to Bunbury font" target="_blank">Buy Bunbury</a> @ MyFonts.</p>
+      <p><a href="https://www.myfonts.com/fonts/mti/bunbury/" title="Go to Bunbury font" target="_blank">Bunbury</a> @ MyFonts.</p>
     </article>
     <article id="amsteldok">
       <img src="rsc/amsteldok-font.gif" title="Amsteldok logo">
@@ -71,25 +76,25 @@
       <img src="rsc/fs-neruda-font.gif" title="FS Neruda font">
       <h2><a href="https://www.myfonts.com/fonts/fontsmith/fs-neruda/" title="Go to FS Neruda font" target="_blank">FS Neruda</a> (Fontsmith, 2018)</h2>
       <p>A smart, sharp and classical type that references the very best literary typeface traditions.</p>
-      <p><a href="https://www.myfonts.com/fonts/fontsmith/fs-neruda/" title="Go to FS Neruda font" target="_blank">Buy FS Neruda</a> @ MyFonts.</p>
+      <p><a href="https://www.myfonts.com/fonts/fontsmith/fs-neruda/" title="Go to FS Neruda font" target="_blank">FS Neruda</a> @ MyFonts.</p>
     </article>
     <article id="fs-charity">
       <img src="rsc/fs-charity-font.gif" title="FS Charity font">
       <h2><a href="https://www.myfonts.com/fonts/fontsmith/lost-foundry/" title="Go to FS Charity font" target="_blank">FS Charity</a> (Fontsmith, 2018)</h2>
       <p>A true Tuscan letterform from the broken glory of ceramic tile.</p>
-      <p><a href="https://www.myfonts.com/fonts/fontsmith/lost-foundry/" title="Go to FS Cattle font" target="_blank">Buy FS Charity</a> @ MyFonts.</p>
+      <p><a href="https://www.myfonts.com/fonts/fontsmith/lost-foundry/" title="Go to FS Cattle font" target="_blank">FS Charity</a> @ MyFonts.</p>
     </article>
     <article id="fs-berwick">
       <img src="rsc/fs-berwick-font.gif" title="FS Berwick font">
       <h2><a href="https://www.myfonts.com/fonts/fontsmith/lost-foundry/" title="Go to FS Berwick font" target="_blank">FS Berwick</a> (Fontsmith, 2018)</h2>
       <p>A broad‐shouldered Egyptian serif typeface.</p>
-      <p><a href="https://www.myfonts.com/fonts/fontsmith/lost-foundry/" title="Go to FS Cattle font" target="_blank">Buy FS Berwick</a> @ MyFonts.</p>
+      <p><a href="https://www.myfonts.com/fonts/fontsmith/lost-foundry/" title="Go to FS Cattle font" target="_blank">FS Berwick</a> @ MyFonts.</p>
     </article>
     <article id="fs-cattle">
       <img src="rsc/fs-cattle-font.gif" title="FS Cattle font">
       <h2><a href="https://www.myfonts.com/fonts/fontsmith/lost-foundry/" title="Go to FS Cattle font" target="_blank">FS Cattle</a> (Fontsmith, 2018)</h2>
       <p>A wide, but not overly extended, Grotesque‐style Sans Serif.</p>
-      <p><a href="https://www.myfonts.com/fonts/fontsmith/lost-foundry/" title="Go to FS Cattle font" target="_blank">Buy FS Cattle</a> @ MyFonts.</p>
+      <p><a href="https://www.myfonts.com/fonts/fontsmith/lost-foundry/" title="Go to FS Cattle font" target="_blank">FS Cattle</a> @ MyFonts.</p>
     </article>
     <article id="zacapa">
       <img src="rsc/zacapa-font.gif" title="Zacapa font">
@@ -104,34 +109,34 @@
       <p>– Project direction: Fernando Mello.</p>
       <p>– Cyrillic direction: Krista Radoeva.</p>
       <p>FS Brabo designed by Fernando Mello (Fontsmith, 2015).</p>
-      <p><a href="https://www.myfonts.com/fonts/fontsmith/fs-brabo/" title="Go to FS Brabo Pro font" target="_blank">Buy FS Brabo Pro</a> @ MyFonts.</p>
+      <p><a href="https://www.myfonts.com/fonts/fontsmith/fs-brabo/" title="Go to FS Brabo Pro font" target="_blank">FS Brabo Pro</a> @ MyFonts.</p>
     </article>
     <article id="rocknroll">
-      <img src="rsc/rocknroll-font.gif" title="Rock & Roll font">
+      <a href="rocknroll" title="Go to Rock & Roll font"><img src="rsc/rocknroll-font.gif" title="Rock & Roll font"></a>
       <h2><a href="rocknroll" title="Go to Rock & Roll font">Rock & Roll</a> (Pedro Arilla, 2017)</h2>
       <p>A multi-script type system for digital publications.</p>
       <p>– Rock (Serif: Latin, Greek and Cyrillic)</p>
       <p>– Roll (Sans: Latin, Arabic and Japanese)</p>
-      <p>Not on sale (yet).</p>
+      <p>Not available for sale.</p>
       <p>Go to <a href="rocknroll" title="Go to Rock & Roll font">Rock & Roll web page</a>.</p>
     </article>
     <article id="mestre">
-      <img src="rsc/mestre-font.gif" title="Mestre font">
+      <a href="mestre" title="Go to Mestre font"><img src="rsc/mestre-font.gif" title="Mestre font"></a>
       <h2><a href="mestre" title="Go to Mestre font">Mestre</a> (Pedro Arilla, 2016)</h2>
       <p>A rational &amp; humanist sans-serif w/ 16 fonts.</p>
-      <p>Full family: pay what you want — minimum €10.</p>
+      <p>Not available for sale.</p>
       <p>Go to <a href="mestre" title="Go to Mestre font">Mestre web page</a>.</p>
     </article>
     <article id="valentina">
-      <img src="rsc/valentina-font.gif" title="Valentina font">
+      <a href="valentina" title="Go to Valentina font"><img src="rsc/valentina-font.gif" title="Valentina font"></a>
       <h2><a href="valentina" title="Go to Valentina font">Valentina</a> (Pedro Arilla, 2012)</h2>
       <p>An antique Spanish didone.</p>
-      <p>Font: pay what you want — minimum €1.</p>
+      <p>Not available for sale.</p>
       <p>Go to <a href="valentina" title="Go to Valentina font">Valentina web page</a>.</p>
     </article>
   </section>
   <section class="footer">
-    <p>☺ 2010–<script>document.write(new Date().getFullYear())</script>, Pedro Arilla &emsp;&emsp; <span class="newlinefooter"></span><a href="mailto:studio@pedroarilla.com">Email</a> / <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> / <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> / <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
+    <p>☺ 2010–<script>document.write(new Date().getFullYear())</script>, Pedro Arilla &emsp;&emsp; <span class="newlinefooter"></span><a href="mailto:pedro@arillatype.studio">Email</a> / <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> / <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> / <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
   </section>
 </body>
 </html>
