--- a/fonts/rocknroll.html
+++ b/fonts/rocknroll.html
@@ -35,7 +35,7 @@
       <li><strong>5 scripts:</strong> Arabic, Cyrillic, Greek, Japanese and Latin.</li>
       <li><strong>48 fonts:</strong> 2 styles, 6 weights, 80+ languages supported and 1,500+ glyphs.</li>
       <li><strong>OpenType features:</strong> small caps, case-sensitive forms, lining, tabular &amp; old-style figures, scientific superior/inferior figures, fractions, manicules, discretionary ligatures, vocalization marks (Arabic), etcetera.</li>
-      <li><strong>Price:</strong> Not for sale (yet)</li>
+      <li><strong>Not available for sale.</strong></li>
     </ul>
     <img src="rsc/pedroarilla-rocknroll-01.jpg">
     <img src="rsc/pedroarilla-rocknroll-02.png">
@@ -47,7 +47,7 @@
     <img src="rsc/pedroarilla-rocknroll-08.png">
   </section>
   <section class="footer">
-    <p>☺ 2010–<script>document.write(new Date().getFullYear())</script>, Pedro Arilla &emsp;&emsp; <span class="newlinefooter"></span><a href="mailto:studio@pedroarilla.com">Email</a> / <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> / <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> / <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
+    <p>☺ 2010–<script>document.write(new Date().getFullYear())</script>, Pedro Arilla &emsp;&emsp; <span class="newlinefooter"></span><a href="mailto:pedro@arillatype.studio">Email</a> / <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> / <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> / <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
   </section>
 </body>
 </html>
