--- a/fonts/valentina.html
+++ b/fonts/valentina.html
@@ -36,13 +36,9 @@
       <li><strong>1 style:</strong> 450+ glyphs and 3 stylistic sets</li>
       <li><strong>Alternates:</strong> 125 alternative lower cases characters.</li>
       <li><strong>Ligatures:</strong> 46 ligatures.</li>
-      <li><strong>Price:</strong> pay-what-you-want.</li>
-      <li><strong>Version:</strong> 1.003 — see <a href="rsc/valentina.log" target="_blank">log</a> and <a href="rsc/valentina-licence.txt" target="_blank">licence</a>.
+      <li><strong>Version:</strong> 1.003 — <a href="rsc/valentina.log" target="_blank">see log</a>.
+      <li><strong>Not available for sale.</strong></li>
     </ul>
-    <div class="shopping">
-      <p><a href="https://payhip.com/b/n1sU" class="payhip-buy-button" data-theme="grey" data-product="n1sU">Buy Valentina font</a></p>
-      <p>—Pay what you want: minimum €1.</p>
-    </div>
     <img src="rsc/pedroarilla-valentina-01.png">
     <img src="rsc/pedroarilla-valentina-03.png">
     <h2 style="margin-top:30px;">Selected Valentina in use</h2>
@@ -52,13 +48,9 @@
     <img src="rsc/fontinuse-valentina-3.jpg">
     <img src="rsc/fontinuse-valentina-4.jpg">
     <img src="rsc/fontinuse-valentina-5.jpg">
-    <div class="shopping">
-      <p><a href="https://payhip.com/b/n1sU" class="payhip-buy-button" data-theme="grey" data-product="n1sU">Buy Valentina font</a></p>
-      <p>—Pay what you want: minimum €1.</p>
-    </div>
   </section>
   <section class="footer">
-    <p>☺ 2010–<script>document.write(new Date().getFullYear())</script>, Pedro Arilla &emsp;&emsp; <span class="newlinefooter"></span><a href="mailto:studio@pedroarilla.com">Email</a> / <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> / <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> / <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
+    <p>☺ 2010–<script>document.write(new Date().getFullYear())</script>, Pedro Arilla &emsp;&emsp; <span class="newlinefooter"></span><a href="mailto:pedro@arillatype.studio">Email</a> / <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> / <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> / <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
   </section>
 </body>
 </html>
