--- a/fonts/mestre.html
+++ b/fonts/mestre.html
@@ -35,12 +35,9 @@
       <li><strong>16 fonts:</strong> 8 uprights + 8 true italics.</li>
       <li><strong>900+ glyphs:</strong> 40+ languages supported.</li>
       <li><strong>OpenType features:</strong> small caps, case-sensitive forms, lining, tabular &amp; old-style figures, scientific superior/inferior figures, fractions, a set of arrows, etcetera.</li>
-      <li><strong>Version:</strong> 1.2 — see <a href="rsc/mestre.log" target="_blank">log</a> and <a href="rsc/mestre-licence.txt" target="_blank">licence</a>.
+      <li><strong>Version:</strong> 1.2 — <a href="rsc/mestre.log" target="_blank">see log</a>.
+      <li><strong>Not available for sale.</strong>
     </ul>
-    <div class="shopping">
-      <p><a href="https://payhip.com/b/X15B" class="payhip-buy-button" data-theme="grey" data-product="X15B">Buy Mestre font</a></p>
-      <p>—Pay what you want: minimum €10.</p>
-    </div>
     <img src="rsc/pedroarilla-mestre-1.jpg">
     <img src="rsc/pedroarilla-mestre-2.jpg">
     <img src="rsc/pedroarilla-mestre-3.jpg">
@@ -57,13 +54,9 @@
     <img src="rsc/fontinuse-mestre-7.jpg">
     <img src="rsc/fontinuse-mestre-8.jpg">
     <img src="rsc/fontinuse-mestre-9.jpg">
-    <div class="shopping">
-      <p><a href="https://payhip.com/b/X15B" class="payhip-buy-button" data-theme="grey" data-product="X15B">Buy Mestre font</a></p>
-      <p>—Pay what you want: minimum €10.</p>
-    </div>
   </section>
   <section class="footer">
-    <p>☺ 2010–<script>document.write(new Date().getFullYear())</script>, Pedro Arilla &emsp;&emsp; <span class="newlinefooter"></span><a href="mailto:studio@pedroarilla.com">Email</a> / <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> / <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> / <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
+    <p>☺ 2010–<script>document.write(new Date().getFullYear())</script>, Pedro Arilla &emsp;&emsp; <span class="newlinefooter"></span><a href="mailto:pedro@arillatype.studio">Email</a> / <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> / <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> / <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
   </section>
 </body>
 </html>
