--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<title>Pedro Arilla</title>
-	<meta name="description" content="¡Hola! I’m an independent Type Director & Designer with a passion for words living between London and Málaga. I love helping all kind of brands worldwide to encapsulate typographically their voices.">
+	<meta name="description" content="¡Hola! I’m a designer with a passion for words living between London and Málaga. I love helping all kind of brands worldwide to encapsulate typographically their voices at Arillatype.Studio®">
   <meta property="og:title" content="Pedro Arilla"/>
-	<meta property="og:description" content="¡Hola! I’m an independent Type Director & Designer with a passion for words living between London and Málaga. I love helping all kind of brands worldwide to encapsulate typographically their voices."/>
+	<meta property="og:description" content="¡Hola! I’m a designer with a passion for words living between London and Málaga. I love helping all kind of brands worldwide to encapsulate typographically their voices at Arillatype.Studio®"/>
 	<meta property="og:type" content="website"/>
 	<meta property="og:url" content="https://pedroarilla.com/"/>
 	<meta property="og:image" content="https://pedroarilla.com/pedroarilla.jpg"/>
@@ -26,11 +26,11 @@
     </ul>
   </section>
   <section class="content">
-    <h1 id="index"><strong>¡Hola!</strong> I’m an independent Type Director & Designer with a passion for words living between London and Málaga. I love helping all kind of brands worldwide to encapsulate typographically their voices.</h1>
+    <h1 id="index"><strong>¡Hola!</strong> I’m a designer with a passion for words living between London and Málaga. I love helping all kind of brands worldwide to encapsulate typographically their voices at <a href="https://arillatype.studio">Arillatype.Studio®</a></h1>
     <p id="index">I’ve been designing, writing, teaching and lecturing about typefaces for the last decade. I’ve worked as a Creative Director at Monotype and Fontsmith; I hold an MA in Typeface Design from the University of Reading (graduating with distinction); host one of the main podcasts and publications on typography in Spanish (<a href="https://donserifa.com" target="_blank">Don Serifa</a>); and co-organise and teach an international one-week type design workshop (<a href="https://gliglifo.com" target="_blank">Glíglifo</a>).</p>
   </section>
   <section class="footer">
-    <p>☺ 2010–<script>document.write(new Date().getFullYear())</script>, Pedro Arilla &emsp;&emsp; <span class="newlinefooter"></span><a href="mailto:studio@pedroarilla.com">Email</a> / <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> / <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> / <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
+    <p>☺ 2010–<script>document.write(new Date().getFullYear())</script>, Pedro Arilla &emsp;&emsp; <span class="newlinefooter"></span><a href="mailto:pedro@arillatype.studio">Email</a> / <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> / <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> / <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
   </section>
 </body>
 </html>
