--- a/miscellany/gaming.html
+++ b/miscellany/gaming.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<title>Gaming — Pedro Arilla</title>
-	<meta name="description" content="¡Hola! I’m an independent Type Director & Designer with a passion for words living between London and Málaga. I love helping all kind of brands worldwide to encapsulate typographically their voices.">
+	<meta name="description" content="Updated list of video-games I have played recently.">
   <meta property="og:title" content="Gaming — Pedro Arilla"/>
-	<meta property="og:description" content="¡Hola! I’m an independent Type Director & Designer with a passion for words living between London and Málaga. I love helping all kind of brands worldwide to encapsulate typographically their voices."/>
+	<meta property="og:description" content="Updated list of video-games I have played recently."/>
 	<meta property="og:type" content="website"/>
 	<meta property="og:url" content="https://pedroarilla.com/reading"/>
 	<meta property="og:image" content="https://pedroarilla.com/pedroarilla.jpg"/>
@@ -35,7 +35,7 @@
     <h2>2021</h2>
     <ul>
       <li><em><strong>Star Wars Jedi: Fallen Order</em></strong> on PlayStation 5 -- playing it</li>
-      <li><em><strong>Super Mario 3D World + Bowser’s Fury</em></strong> on Nintendo Switch, 12 hours 💙</li>
+      <li><em><strong>Super Mario 3D World + Bowser’s Fury</em></strong> on Nintendo Switch, 15 hours ✅</li>
       <li><em><strong>A plague tale: Innocence</em></strong> on PlayStation 5, 1 hour</li>
       <li><em><strong>Star Wars: Squadron</em></strong> on PlayStation 5, 1 hour</li>
       <li><em><strong>Bloodborne</em></strong> on PlayStation 5, 1 hour</li>
@@ -94,7 +94,7 @@
     </ul>
   </section>
   <section class="footer">
-    <p>☺ 2010–<script>document.write(new Date().getFullYear())</script>, Pedro Arilla &emsp;&emsp; <span class="newlinefooter"></span><a href="mailto:studio@pedroarilla.com">Email</a> / <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> / <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> / <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
+    <p>☺ 2010–<script>document.write(new Date().getFullYear())</script>, Pedro Arilla &emsp;&emsp; <span class="newlinefooter"></span><a href="mailto:pedro@arillatype.studio">Email</a> / <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> / <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> / <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
   </section>
 </body>
 </html>
