--- a/miscellany/speaking-teaching.html
+++ b/miscellany/speaking-teaching.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<title>Speaking and Teaching — Pedro Arilla</title>
-	<meta name="description" content="¡Hola! I’m an independent Type Director & Designer with a passion for words living between London and Málaga. I love helping all kind of brands worldwide to encapsulate typographically their voices.">
+	<meta name="description" content="Updated list of talks I have delivered or workshops I have taught.">
   <meta property="og:title" content="Speaking and Teaching — Pedro Arilla"/>
-	<meta property="og:description" content="¡Hola! I’m an independent Type Director & Designer with a passion for words living between London and Málaga. I love helping all kind of brands worldwide to encapsulate typographically their voices."/>
+	<meta property="og:description" content="pdated list of talks I have delivered or workshops I have taught."/>
 	<meta property="og:type" content="website"/>
 	<meta property="og:url" content="https://pedroarilla.com/reading"/>
 	<meta property="og:image" content="https://pedroarilla.com/pedroarilla.jpg"/>
@@ -86,7 +86,7 @@
     </ul>
   </section>
   <section class="footer">
-    <p>☺ 2010–<script>document.write(new Date().getFullYear())</script>, Pedro Arilla &emsp;&emsp; <span class="newlinefooter"></span><a href="mailto:studio@pedroarilla.com">Email</a> / <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> / <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> / <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
+    <p>☺ 2010–<script>document.write(new Date().getFullYear())</script>, Pedro Arilla &emsp;&emsp; <span class="newlinefooter"></span><a href="mailto:pedro@arillatype.studio">Email</a> / <a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a> / <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a> / <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a></p>
   </section>
 </body>
 </html>
