--- a/miscellany/reading.html
+++ b/miscellany/reading.html
@@ -35,6 +35,7 @@
     <h2>2021</h2>
     <ul>
       <li><em><strong>Vozdevieja</em></strong> de Elisa Victoria -- reading it</li>
+      <li><em><strong>#chandaleras: masculinidad femenina vs. feminidad obligatoria en el deporte</em></strong> de Ana Pastor Pascual</li>
       <li><em><strong>Los asquerosos</em></strong> de Santiago Lorenzo 💕</li>
       <li><em><strong>La España de las piscinas</em></strong> de Jorge Dioni López</li>
       <li><em><strong>¡Protesto! Videojuegos desde una perspectiva de género</em></strong> de VV.AA. 💙</li>
