--- a/miscellany/gaming.html
+++ b/miscellany/gaming.html
@@ -34,8 +34,11 @@
     </p>
     <h2>2021</h2>
     <ul>
-      <li><em><strong>Star Wars Jedi: Fallen Order</em></strong> on PlayStation 5 -- playing it</li>
-      <li><em><strong>Super Mario 3D World + Bowser’s Fury</em></strong> on Nintendo Switch, 15 hours ✅</li>
+      <li><em><strong>Kena: Bridge of Spirits</em></strong> on PlayStation 5 -- playing it</li>
+      <li><em><strong>SteamWorld Heist</em></strong> on Nintendo Switch -- playing it</li>
+      <li><em><strong>Bonfire Peaks</em></strong> on Nintendo Switch -- playing it</li>
+      <li><em><strong>Star Wars Jedi: Fallen Order</em></strong> on PlayStation 5, 12 hours</li>
+      <li><em><strong>Super Mario 3D World + Bowser’s Fury</em></strong> on Nintendo Switch, 13 hours ✅</li>
       <li><em><strong>A plague tale: Innocence</em></strong> on PlayStation 5, 1 hour</li>
       <li><em><strong>Star Wars: Squadron</em></strong> on PlayStation 5, 1 hour</li>
       <li><em><strong>Bloodborne</em></strong> on PlayStation 5, 1 hour</li>
