--- a/miscellany/gaming.html
+++ b/miscellany/gaming.html
@@ -34,6 +34,8 @@
     </p>
     <h2>2021</h2>
     <ul>
+      <li><em><strong>Unpacking</em></strong> on Nintendo Switch -- playing it</li>
+      <li><em><strong>Resident Evil 2</em></strong> on PlayStation 5 -- playing it</li>
       <li><em><strong>Kena: Bridge of Spirits</em></strong> on PlayStation 5 -- playing it</li>
       <li><em><strong>SteamWorld Heist</em></strong> on Nintendo Switch -- playing it</li>
       <li><em><strong>Bonfire Peaks</em></strong> on Nintendo Switch -- playing it</li>
@@ -42,12 +44,12 @@
       <li><em><strong>A plague tale: Innocence</em></strong> on PlayStation 5, 1 hour</li>
       <li><em><strong>Star Wars: Squadron</em></strong> on PlayStation 5, 1 hour</li>
       <li><em><strong>Bloodborne</em></strong> on PlayStation 5, 1 hour</li>
-      <li><em><strong>The Last of Us: Part 2</em></strong> on PlayStation 5, 21 hours ❤️</li>
+      <li><em><strong>The Last of Us: Part 2</em></strong> on PlayStation 5, 21 hours ❤️❤️</li>
       <li><em><strong>Ratchet & Clank: A Rift Apart</em></strong> on PlayStation 5, 15 hours 💙</li>
       <li><em><strong>Ratchet & Clank</em></strong> on PlayStation 5, 6 hours</li>
       <li><em><strong>Disco Elysium</em></strong> on PlayStation 5, 1 hour</li>
       <li><em><strong>Horizon Zero Dawn</em></strong> on PlayStation 5, 8 hours</li>
-      <li><em><strong>The Last of Us Remastered + Left Behind</em></strong> on PlayStation 5, 13 hours ❤️</li>
+      <li><em><strong>The Last of Us Remastered + Left Behind</em></strong> on PlayStation 5, 13 hours ❤️❤️</li>
       <li><em><strong>God of War</em></strong> on PlayStation 5, 18 hours 💙</li>
       <li><em><strong>Battlefield 1</em></strong> on PlayStation 5, 1 hour</li>
       <li><em><strong>Journey</em></strong> on PlayStation 5, 1 hour</li>
