--- a/fonts/index.html
+++ b/fonts/index.html
@@ -27,6 +27,12 @@
   </section>
   <section class="content">
     <h1><strong>Fonts</strong></h1>
+    <article id="at-hauss-mono">
+      <a href="https://arillatype.studio" title="Go to At Haüss Mono font" target="_blank"><img src="rsc/at-hauss-mono-font.gif" title="At Haüss Mono font"></a>
+      <h2><a href="https://arillatype.studio" title="Go to At Haüss Mono font" target="_blank">At Haüss Mono</a> (Arillatype.Studio®, 2021)</h2>
+      <p>The monospaced member of the At Haüss Collection.</p>
+      <p><a href="https://arillatype.studio" title="Go to At Haüss Mono font" target="_blank">At Haüss Mono</a> @ Arillatype.Studio®</p>
+    </article>
     <article id="at-hauss-std">
       <a href="https://arillatype.studio" title="Go to At Haüss Std font" target="_blank"><img src="rsc/at-hauss-std-font.gif" title="At Haüss Std font"></a>
       <h2><a href="https://arillatype.studio" title="Go to At Haüss Std font" target="_blank">At Haüss Std</a> (Arillatype.Studio®, 2021)</h2>
