--- a/miscellany/gaming.html
+++ b/miscellany/gaming.html
@@ -34,11 +34,12 @@
     </p>
     <h2>2021</h2>
     <ul>
+      <li><em><strong>Uncharted 4: The lost legacy</em></strong> on Playstation 5 -- playing it</li>
       <li><em><strong>Unpacking</em></strong> on Nintendo Switch -- playing it</li>
-      <li><em><strong>Resident Evil 2</em></strong> on PlayStation 5 -- playing it</li>
-      <li><em><strong>Kena: Bridge of Spirits</em></strong> on PlayStation 5 -- playing it</li>
-      <li><em><strong>SteamWorld Heist</em></strong> on Nintendo Switch -- playing it</li>
-      <li><em><strong>Bonfire Peaks</em></strong> on Nintendo Switch -- playing it</li>
+      <li><em><strong>Resident Evil 2</em></strong> on PlayStation 5, 9 hours ✅</li>
+      <li><em><strong>Kena: Bridge of Spirits</em></strong> on PlayStation 5, 7 hours</li>
+      <li><em><strong>SteamWorld Heist</em></strong> on Nintendo Switch, 6 hours</li>
+      <li><em><strong>Bonfire Peaks</em></strong> on Nintendo Switch, 2 hours</li>
       <li><em><strong>Star Wars Jedi: Fallen Order</em></strong> on PlayStation 5, 12 hours</li>
       <li><em><strong>Super Mario 3D World + Bowser’s Fury</em></strong> on Nintendo Switch, 13 hours ✅</li>
       <li><em><strong>A plague tale: Innocence</em></strong> on PlayStation 5, 1 hour</li>
@@ -57,7 +58,7 @@
       <li><em><strong>Returnal</em></strong> on PlayStation 5, 6 hours</li>
       <li><em><strong>Astros’s Playroom</em></strong> on PlayStation 5, 1 hour</li>
       <li><em><strong>Ori and the Will of the Wisps</em></strong> on Nintendo Switch, 10 hours</li>
-      <li><em><strong>Pokémon:Crystal</em></strong> on Game Boy (emulated), 10 hours</li>
+      <li><em><strong>Pokémon: Crystal</em></strong> on Game Boy (emulated), 10 hours</li>
       <li><em><strong>Luigi’s Mansion 3</em></strong> on Nintendo Switch, 18 hours 💙</li>
       <li><em><strong>Zelda: A link to the past</em></strong> on Game Boy Advance (emulated), 20 hours 💙</li>
       <li><em><strong>Gris</em></strong> on Nintendo Switch, 3 hours ✅</li>
