--- a/miscellany/reading.html
+++ b/miscellany/reading.html
@@ -34,6 +34,13 @@
     </p>
     <h2>2021</h2>
     <ul>
+      <li><em><strong>El grito de la España interior</em></strong> de VV.AA. -- reading it</li>
+      <li><em><strong>C3PO en la corte del Rey Felipe</em></strong> de Pedro Vallín -- reading it</li>
+      <li><em><strong>¿Cuánta tierra necesita un hombre?</em></strong> de Martin Veyron</li>
+      <li><em><strong>Astérix tras las huellas del Grifo</em></strong> de Ferri y Conrad</li>
+      <li><em><strong>Carta blanca</em></strong> de Jordi Lafebre</li>
+      <li><em><strong>Zelda, detrás de la leyenda</em></strong> de Salva Fernández</li>
+      <li><em><strong>Sangre, sudor y píxeles</em></strong> de Jason Schreier 💙</li>
       <li><em><strong>Vozdevieja</em></strong> de Elisa Victoria 💙</li>
       <li><em><strong>#chandaleras: masculinidad femenina vs. feminidad obligatoria en el deporte</em></strong> de Ana Pastor Pascual</li>
       <li><em><strong>Los asquerosos</em></strong> de Santiago Lorenzo 💕</li>
