--- a/miscellany/gaming.html
+++ b/miscellany/gaming.html
@@ -34,9 +34,10 @@
     </p>
     <h2>2021</h2>
     <ul>
-      <li><em><strong>Uncharted 4: The lost legacy</em></strong> on Playstation 5 -- playing it</li>
+      <li><em><strong>Marvel’s Spider-Man</em></strong> on Playstation 5 -- playing it</li>
       <li><em><strong>Unpacking</em></strong> on Nintendo Switch -- playing it</li>
-      <li><em><strong>Resident Evil 2</em></strong> on PlayStation 5, 9 hours ✅</li>
+      <li><em><strong>Uncharted 4: The lost legacy</em></strong> on Playstation 5, 8 hours 💙</li>
+      <li><em><strong>Resident Evil 2</em></strong> on PlayStation 5, 9 hours 💙</li>
       <li><em><strong>Kena: Bridge of Spirits</em></strong> on PlayStation 5, 7 hours</li>
       <li><em><strong>SteamWorld Heist</em></strong> on Nintendo Switch, 6 hours</li>
       <li><em><strong>Bonfire Peaks</em></strong> on Nintendo Switch, 2 hours</li>
@@ -60,7 +61,7 @@
       <li><em><strong>Ori and the Will of the Wisps</em></strong> on Nintendo Switch, 10 hours</li>
       <li><em><strong>Pokémon: Crystal</em></strong> on Game Boy (emulated), 10 hours</li>
       <li><em><strong>Luigi’s Mansion 3</em></strong> on Nintendo Switch, 18 hours 💙</li>
-      <li><em><strong>Zelda: A link to the past</em></strong> on Game Boy Advance (emulated), 20 hours 💙</li>
+      <li><em><strong>Zelda: A link to the past</em></strong> on Game Boy Advance (emulated), 20 hours ❤️</li>
       <li><em><strong>Gris</em></strong> on Nintendo Switch, 3 hours ✅</li>
       <li><em><strong>Mario Kart 8 Deluxe</em></strong> on Nintendo Switch, 20 hours ✅</li>
       <li><em><strong>Immortals Fenyx Rising</em></strong> on Nintendo Switch, 30 hours</li>
