--- a/about/index.html
+++ b/about/index.html
@@ -35,7 +35,7 @@
     <p>I share my life with Cris — and Bunbury, our dog.</p>
   </section>
   <section class="footer">
-    <p>☺ 2010–<script>document.write(new Date().getFullYear())</script>, Pedro Arila.</p>
+    <p>☺ 2010–<script>document.write(new Date().getFullYear())</script>, Pedro Arilla.</p>
   </section>
 </body>
 </html>
