--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <p>-- last update on 20220201.
   </section>
   <section class="footer">
-    <p>☺ 2010–<script>document.write(new Date().getFullYear())</script>, Pedro Arila.</p>
+    <p>☺ 2010–<script>document.write(new Date().getFullYear())</script>, Pedro Arilla.</p>
   </section>
 </body>
 </html>
