--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </ul>
   </section>
   <section class="content">
-    <h1 id="index"><strong>¡Hola!</strong> I’m a designer with a passion for words making fonts at <a href="https://arillatype.studio">Arillatype.Studio®</a> and living in Málaga (ES) because I love blue colour.</h1>
+    <h1 id="index"><strong>¡Hola!</strong> I’m a designer with a passion for words, interested in how typography plays a storytelling role in the intersection of culture, technology and sociology. I help brands and humans worldwide to encapsulate typographically their voices at <a href="https://arillatype.studio">Arillatype.Studio®</a> — previously I worked as a Creative Director at Fontsmith and Monotype.</h1>
   </section>
   <section class="footer">
     <p>☺ 2010–<script>document.write(new Date().getFullYear())</script>, Pedro Arilla.</p>
