--- a/contact/index.html
+++ b/contact/index.html
@@ -19,6 +19,7 @@
   <section class="header">
     <ul>
       <li><strong><a href="../">pedroarilla</a></strong></li>
+      <li><a href="../fonts">fonts</a></li>
       <li><a href="../about">about</a></li>
       <li><a href="./">contact</a></li>
       <li><a href="../log">log</a></li>
@@ -28,8 +29,8 @@
     <h1>Contact</h1>
     <ul>
       <li>Email: <span class="newlinefooter"></span><a href="mailto:pedro@arillatype.studio">pedro@arillatype.studio</a></li>
-      <li>Personal: <span class="newlinefooter"></span><a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a>, <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a>, <a href="https://twitter.com/pedroarilla" rel="me" target="_blank" title="Twitter Pedro Arilla's profile">Twitter</a>, <a href="https://github.com/pedroarilla" rel="me" target="_blank" title="GitHub Pedro Arilla's profile">GitHub</a></li>
-      <li>Arillatype.Studio®: <span class="newlinefooter"></span><a href="https://arillatype.studio" rel="me" target="_blank" title="Arillatype's website">Website</a>, <a href="https://instagram.com/arillatype.studio" rel="me" target="_blank" title="Instagram Arillatype's profile">Instagram</a>, <a href="https://www.linkedin.com/company/arillatype/" rel="me" target="_blank" title="LinkedIn Arillatype's profile">LinkedIn</a></li>
+      <li>Personal: <span class="newlinefooter"></span><a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a>, <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a>, <a href="https://github.com/pedroarilla" rel="me" target="_blank" title="GitHub Pedro Arilla's profile">GitHub</a></li>
+      <li>Arillatype.Studio®: <span class="newlinefooter"></span><a href="https://arillatype.studio" rel="me" target="_blank" title="Arillatype's website">Website</a>, <a href="https://instagram.com/arillatype.studio" rel="me" target="_blank" title="Instagram Arillatype's profile">Instagram</a>, <a href="https://www.linkedin.com/company/arillatype/" rel="me" target="_blank" title="LinkedIn Arillatype's profile">LinkedIn</a>, <a href="https://twitter.com/arillatype" rel="me" target="_blank" title="Twitter Arillatype's profile">Twitter</a></li>
     </ul>
   </section>
   <section class="footer">
