--- a/fonts/index.html
+++ b/fonts/index.html
@@ -19,43 +19,68 @@
   <section class="header">
     <ul>
       <li><strong><a href="../">pedroarilla</a></strong></li>
+      <li><a href="./">fonts</a></li>
       <li><a href="../about">about</a></li>
       <li><a href="../contact">contact</a></li>
-      <li><a href="./">log</a></li>
+      <li><a href="../log">log</a></li>
     </ul>
   </section>
   <section class="content">
     <h1><strong>Fonts</strong></h1>
     <ul id="fonts">
       <li>
-        Note: Listed only the fonts I’m allow to speak about.
+        <strong>Málaga Sans</strong> (Arillatype.Studio®, 2022)<br>
+        A bespoke geometric typeface for an all-round city in collaboration with bRIDA®.
       </li>
       <li>
-        <strong>At Haüss Aero</strong> (Arillatype.Studio®, 2021–22)<br>
+        <strong>At Amiga</strong> (Arillatype.Studio®, 2022)<br>
+        A homage to early computing, retro video gaming, fantasy tales, and space operas.<br>
+        Buy on <a href="https://arillatype.studio/font/at-amiga" target="_blank">Arillatype</a>.
+      </li>
+      <li>
+        <strong>At Slam XCnd</strong> (Arillatype.Studio®, 2022)<br>
+        Inspired by the world of basketball, this extra condensed font is an exuberant ode to rhythm and beat.<br>
+        Buy on <a href="https://arillatype.studio/font/at-slam-xcnd" target="_blank">Arillatype</a>.
+      </li>
+      <li>
+        <strong>At Slam XXCnd</strong> (Arillatype.Studio®, 2022)<br>
+        Inspired by the world of basketball, this exxtra condensed font is an exuberant ode to rhythm and beat.<br>
+        Buy on <a href="https://arillatype.studio/font/at-slam-xxcnd" target="_blank">Arillatype</a>.
+      </li>
+      <li>
+        <strong>At Slam XXXCnd</strong> (Arillatype.Studio®, 2022)<br>
+        Inspired by the world of basketball, this exxxtra condensed font is an exuberant ode to rhythm and beat.<br>
+        Buy on <a href="https://arillatype.studio/font/at-slam-xxxcnd" target="_blank">Arillatype</a>.
+      </li>
+      <li>
+        <strong>At Haüss Aero</strong> (Arillatype.Studio®, 2022)<br>
         Where the Streamline Moderne movement meets grotesque typefaces.<br>
-        Available soon.<br>
+        Buy on <a href="https://arillatype.studio/font/at-hauss-aero" target="_blank">Arillatype</a>.
       </li>
       <li>
-        <strong>At Haüss Mono</strong> (Arillatype.Studio®, 2021–22)<br>
+        <strong>At Haüss Mono</strong> (Arillatype.Studio®, 2022)<br>
         The monospaced member of the At Haüss Collection.<br>
-        Available soon.<br>
+        Buy on <a href="https://arillatype.studio/font/at-hauss-mono" target="_blank">Arillatype</a>.
       </li>
       <li>
-        <strong>At Haüss Std</strong> (Arillatype.Studio®, 2021–22)<br>
+        <strong>At Haüss Std</strong> (Arillatype.Studio®, 2022)<br>
         A contemporary celebration of mid-20th century neo-grotesque typefaces.<br>
-        Available soon.<br>
+        Buy on <a href="https://arillatype.studio/font/at-hauss-std" target="_blank">Arillatype</a>.
       </li>
       <li>
         <strong>Twenix Sans</strong> (Arillatype.Studio®, 2021)<br>
         A friendly and fun custom font for Twenix in collaboration with Humad.<br>
+        Read case-study on <a href="https://arillatype.studio/twenix-custom-typeface" target="_blank">Arillatype</a>.
       </li>
       <li>
         <strong>RTL United</strong> (atipo + Arillatype.Studio®, 2021)<br>
-        A comprenhensive font family based on atipo’s Basier to radiate positivity, humanity and straightforwardness for RTL in collaboration with atipo.<br>
+        A comprenhensive font family based on atipo’s Basier to radiate positivity, humanity and straightforwardness for RTL Group in collaboration with atipo.<br>
+        Read case-study on <a href="https://arillatype.studio/rtl-group-font-expansion" target="_blank">Arillatype</a>.
       </li>
       <li>
         <strong>Busup Sans</strong> (Arillatype.Studio®, 2021)<br>
         A bespoke geometric typeface with a colorful dress for Busup in collaboration with Morillas.<br>
+        Read case-study on <a href="https://arillatype.studio/busup-custom-typeface" target="_blank">Arillatype</a>.
       </li>
       <li>
         <strong>SM font system</strong> (Arillatype.Studio®, 2021)<br>
@@ -64,6 +89,7 @@
       <li>
         <strong>Escola Sans</strong> (Arillatype.Studio®, 2021)<br>
         A collaborative bespoke typeface for the public design school EASD València.<br>
+        Read case-study on <a href="https://arillatype.studio/easd-valencia-custom-typeface" target="_blank">Arillatype</a>.
       </li>
       <li>
         <strong>Ibercaja Sans</strong> (Monotype, 2020)<br>
@@ -115,7 +141,7 @@
       <li>
         <strong>Heineken Serif 18</strong> (Fontsmith, 2018)<br>
         Update of corporate and logo Heineken typeface.<br>
-        Also in the project: Fernando Mello and Phil Garnham.
+        Developed with: Fernando Mello and Phil Garnham.
       </li>
       <li>
         <strong>FS Neruda</strong> (Fontsmith, 2018)<br>
@@ -171,7 +197,7 @@
       <li>
         <strong>Valentina</strong> (Pedro Arilla, 2012)<br>
         An antique Spanish didone.<br>
-        A pay-what-you-want font with half a million downloads.<br>
+        A pay-what-you-want font with (almost) a million downloads.<br>
         Not available anymore.
       </li>
     </ul>
