--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
   <section class="header">
     <ul>
       <li><strong><a href="./">pedroarilla</a></strong></li>
+      <li><a href="./fonts">fonts</a></li>
       <li><a href="./about">about</a></li>
       <li><a href="./contact">contact</a></li>
       <li><a href="./log">log</a></li>
     </ul>
   </section>
   <section class="content">
-    <h1 id="index"><strong>¡Hola!</strong> I’m a designer with a passion for words, interested in how typography plays a storytelling role in the intersection of culture, technology and sociology. I help brands and humans worldwide to encapsulate typographically their voices at <a href="https://arillatype.studio">Arillatype.Studio®</a> — previously I worked as a Creative Director at Fontsmith and Monotype.</h1>
+    <h1>¡Hola!</h1> I’m a designer with a passion for words, interested in how typography plays a storytelling role in the intersection of culture, technology and sociology. I help brands and humans worldwide to encapsulate typographically their voices at <a href="https://arillatype.studio">Arillatype.Studio®</a>.
   </section>
   <section class="footer">
     <p>☺ 2010–<script>document.write(new Date().getFullYear())</script>, Pedro Arilla.</p>
