--- a/about/index.html
+++ b/about/index.html
@@ -19,6 +19,7 @@
   <section class="header">
     <ul>
       <li><strong><a href="../">pedroarilla</a></strong></li>
+      <li><a href="../fonts">fonts</a></li>
       <li><a href="./">about</a></li>
       <li><a href="../contact">contact</a></li>
       <li><a href="../log">log</a></li>
@@ -27,10 +28,9 @@
   <section class="content">
     <h1>About</h1>
     <p>I’m Pedro Arilla (1984—), a designer with a passion for words working as a Type Director at <a href="https://arillatype.studio">Arillatype.Studio®</a> on helping brands worldwide to encapsulate typographically their voices.</p>
-    <p>I’m interested in how typography plays a storytelling role in the intersection of creativity, craft and technology. During my career, I’ve designed and led <a href="../log/fonts.html">font projects</a> for clients such as Google, Amazon, Paralympics, Oxford University Press, MotoGP, Virgin, Davis Cup, Heineken, and Macy’s.</p>
+    <p>I’ve graduated with Distinction in the world’s top Typeface Design Masters of Reading (UK), worked as a Creative Director at the legendary foundries Fontsmith (UK) and Monotype (USA), led projects for clients such as Google, Amazon, Virgin, Paralympics, MotoGP and FC Barcelona, and designed typefaces in Latin, Arabic, Cyrillic, Greek, Thai and Japanese scripts.</p>
     <p>My job has been awarded and exhibited worldwide. I teach workshops and speak at conferences in universities and events around the globe. I’ve been jury in literary and branding awards. My texts and articles have been translated into distant languages.</p>
-    <p>I’ve worked as a Creative Director at Fontsmith and Monotype; I hold an MA in Typeface Design from the University of Reading — graduating with distinction; I host one of the main podcasts and publications on typography in Spanish (<a href="https://donserifa.com" target="_blank">Don Serifa</a>); I co-organise and teach an international one-week type design workshop (<a href="https://gliglifo.com" target="_blank">Glíglifo</a>); and I’m writing a book on type evaluation.</p>
-    <p>My main passions are stories and narratives, and how language can become tactile. I love observing the inner poetry of nature. I am fascinated by human lore and character. I truly feel free while writing. I <a href="../log/reading.html">read</a> compulsively. I leave everything else when there is a good basketball game to watch, an interesting <a href="../log/gaming.html">videogame</a> to play, or a new destination to travel to.</p>
+    <p>I co-organise and teach an international one-week type design workshop (<a href="https://gliglifo.com" target="_blank">Glíglifo</a>); I’m writing a book on type evaluation; and I wrote one of the main blogs on typography in Spanish for 11 years (<a href="https://donserifa.com" target="_blank">Don Serifa</a>); .</p>
     <p>I’m from Ejea de los Caballeros (Zaragoza, Spain). I’ve lived also in Zaragoza (Spain), Reading and London (United Kingdom). Now I am based in La Cala del Moral (Málaga, Spain) because I love blue colour.</p>
     <p>I share my life with Cris — and Bunbury, our dog.</p>
   </section>
