--- a/index.html
+++ b/index.html
@@ -18,18 +18,60 @@
 <body>
   <section class="header">
     <ul>
-      <li><strong><a href="./">pedroarilla</a></strong></li>
-      <li><a href="./fonts">fonts</a></li>
-      <li><a href="./about">about</a></li>
-      <li><a href="./contact">contact</a></li>
-      <li><a href="./log">log</a></li>
+      <li><a href="./index.html" class="pedro">☻ Pedro Arilla</a></li>
+      <li><a href="#fonts">Fonts</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#contact">Contact</a></li>
+      <li><a href="#logs">Logs</a></li>
     </ul>
   </section>
-  <section class="content">
-    <h1>¡Hola!</h1> I’m a designer with a passion for words, interested in how typography plays a storytelling role in the intersection of culture, technology and sociology. I help brands and humans worldwide to encapsulate typographically their voices at <a href="https://arillatype.studio">Arillatype.Studio®</a>.
+  <section class="content" id="intro">
+    <h1><strong class="blue">¡Hola!</strong> I’m a designer with a passion for words, interested in how typography plays a storytelling role at the intersection of culture, technology and craft. I help brands and humans worldwide to encapsulate typographically their voices at <a href="https://arillatype.studio" id="link">Arillatype.Studio®</a>.</h1>
+  </section>
+  <section class="content" id="fonts">
+    <h2>Fonts</h2>
+    <ul id="fonts">
+      <li>
+        <strong>Coming soon...</strong><br>
+        During my career, I have designed 50+ font families.<br>
+        You can see the last (and best) ones at <a href="https://arillatype.studio" id="link">Arillatype.Studio®</a>.
+      </li>
+    </ul>
+  </section>
+  <section class="content" id="about">
+    <h2>About</h2>
+    <p>I’m Pedro Arilla (1984—), a designer with a passion for words, co-founder and Type Director of <a href="https://arillatype.studio">Arillatype.Studio®</a> where we help brands worldwide to encapsulate typographically their voices.</p>
+    <p>I’ve graduated with Distinction in the world’s top Typeface Design Masters of Reading (UK), worked as a Creative Director at the legendary foundries Fontsmith (UK) and Monotype (USA), led projects for clients such as Google, Amazon, Virgin, Paralympics, MotoGP and FC Barcelona, and designed typefaces in Latin, Arabic, Cyrillic, Greek, Thai and Japanese scripts.</p>
+    <p>My job has been awarded and exhibited worldwide. I teach workshops and speak at conferences in universities and events around the globe. I’ve been jury in literary and branding awards. My texts and articles have been translated into distant languages.</p>
+    <p>I’m writing a book on type evaluation; I co-organise and teach an international one-week type design workshop (<a href="https://gliglifo.com" target="_blank">Glíglifo</a>); and during 11 years I wrote one of the main blogs on typography in Spanish (Don Serifa).</p>
+    <p>I’m from Ejea de los Caballeros (Zaragoza, Spain). I’ve lived also in Zaragoza (Spain), Reading and London (United Kingdom). Now I am based in La Cala del Moral (Málaga, Spain) because I love blue colour.</p>
+    <p>I share my life with Cris — and Bunbury, our dog.</p>
+  </section>
+  <section class="content" id="contact">
+    <h2>Contact</h2>
+    <ul>
+      <li>Email: <span class="newlinefooter"></span><a href="mailto:pedro@arillatype.studio">pedro@arillatype.studio</a></li>
+      <li>Personal: <span class="newlinefooter"></span><a href="https://instagram.com/pedroarilla" rel="me" target="_blank" title="Instagram Pedro Arilla's profile">Instagram</a>, <a href="https://www.linkedin.com/in/pedroarilla" rel="me" target="_blank" title="LinkedIn Pedro Arilla's profile">LinkedIn</a>, <a href="https://github.com/pedroarilla" rel="me" target="_blank" title="GitHub Pedro Arilla's profile">GitHub</a></li>
+      <li>Arillatype.Studio®: <span class="newlinefooter"></span><a href="https://arillatype.studio" rel="me" target="_blank" title="Arillatype's website">Website</a>, <a href="https://instagram.com/arillatype" rel="me" target="_blank" title="Instagram Arillatype's profile">Instagram</a>, <a href="https://www.linkedin.com/company/arillatype/" rel="me" target="_blank" title="LinkedIn Arillatype's profile">LinkedIn</a>, <a href="https://twitter.com/arillatype" rel="me" target="_blank" title="Twitter Arillatype's profile">Twitter</a>, <a href="http://www.behance.net/arillatype" rel="me" target="_blank" title="Behance Arillatype's profile">Behance</a></li>
+    </ul>
+  </section>
+  <section class="content" id="logs">
+    <h2>Logs</h2>
+    <p style="line-height:1.5em;">
+      <a href="./logs/reading.html">Reading</a></br>
+      <a href="./logs/gaming.html">Gaming</a></br>
+      <a href="./logs/speaking.html">Speaking</a></br>
+      <a href="./logs/teaching.html">Teaching</a></br>
+      <a href="./logs/interviews.html">Interviews</a></br>
+      <a href="./logs/writing.html">Writing</a></br>
+      <a href="./logs/coding.html">Coding</a></br>
+      <a href="./logs/awards.html">Awards</a></br>
+      <a href="./logs/jury.html">As jury</a></br>
+      <a href="./logs/exhibitions.html">Exhibitions</a>
+    </p>
   </section>
   <section class="footer">
-    <p>☺ 2010–<script>document.write(new Date().getFullYear())</script>, Pedro Arilla.</p>
+    <p>© 2010–<script>document.write(new Date().getFullYear())</script>. Website set in <a href="https://arillatype.studio/font/at-hauss">At Haüss</a>.</p>
   </section>
 </body>
 </html>
