--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <li>
         <strong>Coming soon...</strong><br>
         During my career, I have designed 50+ font families.<br>
-        You can see the last (and best) ones at <a href="https://arillatype.studio" id="link">Arillatype.Studio®</a>.
+        You can see the last ones at <a href="https://arillatype.studio" id="link">Arillatype.Studio®</a>.
       </li>
     </ul>
   </section>
